--- a/notebooks/GrafoHSCorrelationTables.ipynb
+++ b/notebooks/GrafoHSCorrelationTables.ipynb
@@ -46,6 +46,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cffe8435-7a85-408a-a91e-186a00114268",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Period between 2007 and 2022 contains the HS07,HS12,HS17 versions\n",
+      "\n",
+      "Loading HS Correlations Tables\n",
+      "\n",
+      "The position 010130 was included in the HS12,HS17 versions\n",
+      "\n",
+      "Evaluating maximum period with no precision loss for position 010130\n",
+      "\n",
+      "Evaluating graph object with HS12,HS17 versions\n",
+      "\n",
+      "Your position has no precision loss from 2012 to 2022\n",
+      "***************************************************************************\n",
+      "The positions you have to use to maintain homogeneous series between 2007 and 2022 is: \n",
+      "\n",
+      " ['HS07-010110', 'HS07-010190', 'HS12-010121', 'HS12-010129', 'HS12-010130', 'HS12-010190', 'HS17-010121', 'HS17-010129', 'HS17-010130', 'HS17-010190']\n"
+     ]
+    }
+   ],
+   "source": [
+    "tables.query(position=\"010130\", start_year=2007)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d92b0a0c-93b7-435e-a1d6-75482c28b3db",
    "metadata": {},
