--- a/notebooks/GrafoHSCorrelationTables.ipynb
+++ b/notebooks/GrafoHSCorrelationTables.ipynb
@@ -47,34 +47,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "cffe8435-7a85-408a-a91e-186a00114268",
+   "execution_count": 3,
+   "id": "e7b48828-3f4b-44ac-b0a4-3159d0edbe18",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Period between 2007 and 2022 contains the HS07,HS12,HS17 versions\n",
-      "\n",
-      "Loading HS Correlations Tables\n",
-      "\n",
-      "The position 010130 was included in the HS12,HS17 versions\n",
-      "\n",
-      "Evaluating maximum period with no precision loss for position 010130\n",
-      "\n",
-      "Evaluating graph object with HS12,HS17 versions\n",
-      "\n",
-      "Your position has no precision loss from 2012 to 2022\n",
-      "***************************************************************************\n",
-      "The positions you have to use to maintain homogeneous series between 2007 and 2022 is: \n",
-      "\n",
-      " ['HS07-010110', 'HS07-010190', 'HS12-010121', 'HS12-010129', 'HS12-010130', 'HS12-010190', 'HS17-010121', 'HS17-010129', 'HS17-010130', 'HS17-010190']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "WindowsPath('C:/Users/Usuario/Desktop/CEP/HSConversionTables')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "tables.query(position=\"010130\", start_year=2007)"
+    "Path(r\"C:\\Users\\Usuario\\Desktop\\CEP\\HSConversionTables\")"
    ]
   },
   {
@@ -466,6 +455,24 @@
     "fig = tables.genSankey(pos, start_year = 1992, end_year = 2021, output_title=f\"Sankey Diagram - {pos}\")\n",
     "if fig is not None:\n",
     "    plotly.offline.plot(fig, validate=False, filename = f\"./img/{pos}.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15905f5f-56c1-4c70-b423-e312fd34643f",
+   "metadata": {},
+   "source": [
+    "## Viendo todo junto. tables.query(position=\"010130\", start_year=2007, sankey=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f039a7e6-0dcf-448b-b224-721dcd6e269d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tables.query(position=\"010130\", start_year=2007, sankey=True)"
    ]
   }
  ],
