--- a/notebooks/GrafoHSCorrelationTables.ipynb
+++ b/notebooks/GrafoHSCorrelationTables.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "90fab08c-04ae-4b25-b88d-5c291faa740f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Grafo Tablas Correlación del HS"
    ]
@@ -46,30 +48,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "e7b48828-3f4b-44ac-b0a4-3159d0edbe18",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "WindowsPath('C:/Users/Usuario/Desktop/CEP/HSConversionTables')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Path(r\"C:\\Users\\Usuario\\Desktop\\CEP\\HSConversionTables\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "d92b0a0c-93b7-435e-a1d6-75482c28b3db",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## ¿Cuál es el horizonte temporal máximo sin pérdida de precisión dada una posición? "
    ]
@@ -181,7 +165,10 @@
   {
    "cell_type": "markdown",
    "id": "f8852f4d-34a5-4721-b356-ef0ebfe0db0f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## ¿Qué sacrificio en precisión es necesario dado un horizonte temporal y una posición determinados? "
    ]
@@ -460,9 +447,12 @@
   {
    "cell_type": "markdown",
    "id": "15905f5f-56c1-4c70-b423-e312fd34643f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "## Viendo todo junto. tables.query(position=\"010130\", start_year=2007, sankey=True)"
+    "## Viendo todo junto"
    ]
   },
   {
