--- a/notebooks/GrafoHSCorrelationTables.ipynb
+++ b/notebooks/GrafoHSCorrelationTables.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "186272f4-1b9a-41de-be74-eaa1ffad6728",
    "metadata": {
     "tags": []
@@ -448,7 +448,6 @@
    "cell_type": "markdown",
    "id": "15905f5f-56c1-4c70-b423-e312fd34643f",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -457,12 +456,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f039a7e6-0dcf-448b-b224-721dcd6e269d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Period between 1992 and 2022 contains the HS92,HS96,HS02,HS07,HS12,HS17 versions\n",
+      "\n",
+      "Loading HS Correlations Tables\n",
+      "\n",
+      "The position 010641 was included in the HS12,HS17 versions\n",
+      "\n",
+      "Evaluating maximum period with no precision loss for position 010641\n",
+      "\n",
+      "Evaluating graph object with HS12,HS17 versions\n",
+      "\n",
+      "Your position has no precision loss from 2012 to 2022\n",
+      "***************************************************************************\n",
+      "The positions you have to use to maintain homogeneous series between 1992 and 2022 is: \n",
+      "\n",
+      " ['HS02-010611', 'HS02-010612', 'HS02-010619', 'HS02-010620', 'HS02-010631', 'HS02-010632', 'HS02-010639', 'HS02-010690', 'HS07-010611', 'HS07-010612', 'HS07-010619', 'HS07-010620', 'HS07-010631', 'HS07-010632', 'HS07-010639', 'HS07-010690', 'HS12-010611', 'HS12-010612', 'HS12-010613', 'HS12-010614', 'HS12-010619', 'HS12-010620', 'HS12-010631', 'HS12-010632', 'HS12-010633', 'HS12-010639', 'HS12-010641', 'HS12-010649', 'HS12-010690', 'HS17-010611', 'HS17-010612', 'HS17-010613', 'HS17-010614', 'HS17-010619', 'HS17-010620', 'HS17-010631', 'HS17-010632', 'HS17-010633', 'HS17-010639', 'HS17-010641', 'HS17-010649', 'HS17-010690', 'HS92-010600', 'HS96-010600']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\Usuario\\\\Desktop\\\\CEP\\\\HSConversionTables\\\\img\\\\010641.html'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tables.query(position=\"010641\", sankey=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54ec478c-a12d-4880-890a-e372fb470b61",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tables.query(position=\"010130\", start_year=2007, sankey=True)"
+    "tables."
    ]
   }
  ],
